--- a/html/src/test/resources/homeWork.html
+++ b/html/src/test/resources/homeWork.html
@@ -8,19 +8,19 @@
       <body>
       <form action="https://www.google.com/" method="get">
       <div>
-          <label>Поле для логина пользователя</label>
+          <label id="01">Поле для логина пользователя</label>
           </br>
           <input name="login"/>
           </br>
-          <label>Поле для пароля</label>
+          <label id="02">Поле для пароля</label>
           </br>
           <input name="password"/>
            </br>
-          <label>Поле для комментария</label>
+          <label id="03">Поле для комментария</label>
           </br>
           <input name="comment"/>
           </br>
-          <label>Поле для заметок</label>
+          <label id="04">Поле для заметок</label>
           </br>
           <input name="notes"/>
           </br>
